More Info forms changed to dynamic panel form and footer alignment fixes

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -151,7 +151,9 @@ body{
 .my-custom-orderform-panel {
   border-width: 0px !important;
 }
-
+.w-96{
+  width: 96%;
+}
 
 
 
